Make ComputeWordFragmentDimensions() look at the content data from the next frame instead of this frame. Bug 282760, patch by Uri Bernstein <uriber@gmail.com>, r=smontagu, sr=roc, a=asa